Wed Jun 28 17:16:06 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Code tidy

Wed Jun 28 15:06:08 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: include CVD header (without MD5 and digital signature)
		       at the top of db.info file

Wed Jun 28 00:00:50 CEST 2006 (tk)
----------------------------------
  * sigtool: --diff: initial version of update script generator

Mon Jun 26 20:23:22 CEST 2006 (tk)
----------------------------------
  * libclamav: allow wildcarded prefix when signature contains static
	       pattern of length AC_DEFAULT_DEPTH

Sun Jun 25 14:29:22 CEST 2006 (tk)
----------------------------------
  * libclamav/matcher-ac.c: fix possible false matches of alternatives
			    Problem reported by Nicolas Riendeau
			    <knightr*istop.com>

Fri Jun 23 00:01:16 CEST 2006 (tk)
----------------------------------
  * docs/signatures.pdf: update

Thu Jun 22 11:14:25 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: create db.info file and include it in CVD

Wed Jun 21 21:06:06 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: use getpass() replacement in getdsig(), thanks to
		       Luca Gibelli <luca*clamav.net>

Wed Jun 21 09:55:54 BST 2006 (njh)
----------------------------------
  * clamav-milter.c:	Fix compilation error introduced by strrcpy move

Tue Jun 20 20:37:21 BST 2006 (njh)
----------------------------------
  * libclamv/tnef.c:	Better indication of where an error was trapped

Tue Jun 20 18:49:10 CEST 2006 (tk)
----------------------------------
  * libclamav/strrcpy.[ch]: remove files; move strrcpy() into str.c

Sat Jun 17 22:57:37 CEST 2006 (tk)
----------------------------------
  * libclamav: minor code cleanup

Sat Jun 17 21:17:20 CEST 2006 (tk)
----------------------------------
  * libclamav/matcher-bm.c: minor optimization patch (~7% speed up) from
			    Christophe Poujol <christophe.poujol*atosorigin.com>
